mech-nerd -> mech-aura

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mechnerd",
+  "name": "mechaura",
   "version": "1.0.0",
   "description": "A mechanical keyboard sound simulator",
   "main": "src/main.js",
